--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello Coursera</title>
   </head>
   <body>
-    <h1> hello <h1>
+    <h1> hello, it's nice to meet you <h1>
   </body>
 </html>
